# scintillation

./: CMakeLists.txt  main.cc  tags  vis.mac
.ctags.d/: 0.ctags
include/: ActionInitialization.hh  DetectorConstruction.hh  MyOpticalPhysics.hh  MyScintillation.hh  PrimaryGeneratorAction.hh  RunAction.hh  ScreenHit.hh  ScreenSD.hh  StackingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  MyOpticalPhysics.cc  MyScintillation.cc  PrimaryGeneratorAction.cc  RunAction.cc  ScreenHit.cc  ScreenSD.cc  StackingAction.cc
